<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="jugar">Jugar</string>
    <string name="config">Configurar</string>
    <string name="acercade">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="acercadeTexto">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <string name="puntuacionesTitulo">Puntuaciones</string>
    <string name="noHayPuntuaciones">No hay puntuaciones</string>
    <string name="acercadeMenu">Acerca de</string>
    <string name="acercadeConfig">Configuración</string>

</resources>